# Kronos-RISC-V-Emulator

./: .gitignore  CMakeLists.txt  Emulador-RISC-V.cpp  Emulador-RISC-V.h  README.md  codeeditor.cpp  codeeditor.h  compilingprocessdialog.cpp  computer.cpp  computer.h  config.json  config.yml  cpu.cpp  cpu.h  decoder.cpp  decoder.h  display.cpp  display.h  display.ui  endian.cpp  executioncampigndialog.cpp  executioncampigndialog.ui  highlighter.cpp  highlighter.h  instructionsdialog.cpp  instructionsdialog.h  instructionsdialog.ui  linenumberarea.h  linker.ld  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memory.cpp  memory.h  ram.cpp  ram.h  res.qrc  statsdialog.cpp  statsdialog.h  (+1 more)
Bus/: Bus.cpp  Bus.h
CPU/: CPU.cpp  CPU.h  decoder.cpp  decoder.h  endian.cpp  endian.h
Computer/: Computer.cpp  Computer.h
RAM/: RAM.cpp  RAM.h
include/: computer.h
include/core/: cpu.h  decoder.h  endian.h  loader.h
include/gui/: mainwindow.h
include/gui/dialog/: compilingprocessdialog.h  executioncampigndialog.h  instructionsdialog.h  statsdialog.h
include/gui/editor/: codeeditor.h  highlighter.h
include/memory/: memory.h
src/: computer.cpp
src/core/: cpu.cpp  decoder.cpp  endian.cpp  loader.cpp
src/gui/: mainwindow.cpp
src/gui/dialog/: compilingprocessdialog.cpp  executioncampigndialog.cpp  instructionsdialog.cpp  statsdialog.cpp
src/gui/editor/: codeeditor.cpp  highlighter.cpp
src/memory/: memory.cpp
ui/: mainwindow.ui
ui/dialog/: compilingprocessdialog.ui  statsdialog.ui
